feat: casting to uri